--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,1 +1,15 @@
-texp
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>Hello World</title>
+	</head>
+	<body>
+		<h1>Hello World</h1>
+		<p>This is a web page.</p>
+		<footer>
+			<p>Author: Hege Refsnes<br>
+			<a href="mailto:hege@example.com">hege@example.com</a></p>
+		</footer>
+	</body>
+</html>
