--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Hello World</title>
-	</head>
-	<body>
-		<h1>Hello World</h1>
-		<p>This is a web page.</p>
-		<footer>
-			<p>Author: Hege Refsnes<br>
-			<a href="mailto:hege@example.com">hege@example.com</a></p>
+	<head></head>
+	<body style="margin:0;padding:0;">
+		<header style="background-color:#FF0000;width: 100%; height: 70px;">
+			<h1></h1>
+		</header>
+		<footer style="background-color:#00FF00; width: 100%; height: 60px; position:absolute; bottom:0; text-align:center; line-height:60px;">
+			Best School
 		</footer>
 	</body>
 </html>
