--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 	<head></head>
 	<body style="margin:0;padding:0;">
-		<header style="background-color:#FF0000;width: 100%; height: 70px;">
-			<h1></h1>
-		</header>
+		<header style="background-color:#FF0000;width: 100%; height: 70px;"></header>
 		<footer style="background-color:#00FF00; width: 100%; height: 60px; position:absolute; bottom:0; text-align:center; line-height:60px;">
 			Best School
 		</footer>
