--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -14,22 +14,18 @@
 		footer {
 			height: 60px;
 			width: 100%;
-			position:absolute;
-			bottom:0; 
+			position: absolute;
+			bottom: 0; 
 			background: #00FF00;
-		}
-		.center {
 			text-align: center;
-			vertical-align: middle;
+			line-height: 60px;
 		}
 		</style>
 	</head>
 	<body>
 		<div class="header"></div>
 		<footer>
-			<div class="center">
-				<h4>Best School</h4>
-			</div>
+			Best School
 		</footer>
 	</body>
 </html>
