--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<title> test </title>
-</head>
-
-<body style="margin:0;padding:0;">
-	<header style="background-color:#FF0000;width: 100%; height: 70px;"></header>
-	<footer
-		style="background-color:#00FF00; width: 100%; height: 60px; position:absolute; bottom:0; text-align:center; line-height:60px;">
-		Best School
-	</footer>
-</body>
-
+	<head>
+		<meta charset="utf-8">
+		<title> test </title>
+	</head>
+	<body style="margin:0;padding:0;">
+		<header style="background-color:#FF0000;width: 100%; height: 70px;"></header>
+		<footer style="background-color:#00FF00; width: 100%; height: 60px; position:absolute; bottom:0; text-align:center; line-height:60px;">
+			Best School
+		</footer>
+	</body>
 </html>
