--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -8,7 +8,7 @@
 				margin: 0;
 				padding: 0;
 			}
-			.header {
+			header {
 				height: 70px;
 				width: 100%;
 				background: #FF0000;
@@ -25,7 +25,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="header"></div>
+		<header></header>
 		<footer>
 			Best School
 		</footer>
