--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -12,7 +12,13 @@
 	<body>
 		<header>
 		</header>
-		<div class="container"></div>
-		<footer> Best School </footer>
+		<div class="container">
+			<section class="filters">
+				<button class="button"> Search </button>
+			</section>
+		</div>
+		<footer>
+			Best School
+		</footer>
 	</body>
 </html>
