--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -17,11 +17,24 @@
 				<div class="locations">
 					<h3> States </h3>
 					<h4> California, Arizona... </h4>
+					<ul class="popover">
+						<li><h3> Arizona </h3></li>
+						<li><h4> Page </h4></li>
+						<li><h4> Page2 </h4></li>
+						<li><h3> California </h3></li>
+						<li><h4> San Francisco </h4></li>
+						<li><h4> Los Altos </h4></li>
+					</ul>
 				</div>
 				<div class="amenities">
 					<h3> Amenities </h3>
 					<h4> Internet,Kitchen... </h4>
-					<ul popover></ul>
+					<ul class="popover">
+						<li><h4> Internet </h4></li>
+						<li><h4> TV </h4></li>
+						<li><h4> Kitchen </h4></li>
+						<li><h4> Iron </li>
+					</ul>
 				</div>
 				<button class="button"> Search </button>
 			</section>
