--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -18,12 +18,12 @@
 					<h3> States </h3>
 					<h4> California, Arizona... </h4>
 					<ul class="popover">
-						<li><h3> Arizona </h3></li>
-						<li><h4> Page </h4></li>
-						<li><h4> Page2 </h4></li>
-						<li><h3> California </h3></li>
-						<li><h4> San Francisco </h4></li>
-						<li><h4> Los Altos </h4></li>
+						<li><h3> Arizona </h3>
+						<h4> Page </h4>
+						<h4> Page2 </h4></li>
+						<li><h3> California </h3>
+						<h4> San Francisco </h4>
+						<h4> Los Altos </h4></li>
 					</ul>
 				</div>
 				<div class="amenities">
