spaces between lines fixed

--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -18,22 +18,23 @@
 					<h3> States </h3>
 					<h4> California, Arizona... </h4>
 					<ul class="popover">
-						<li><h3> Arizona </h3>
-						<h4> Page </h4>
-						<h4> Page2 </h4></li>
-						<li><h3> California </h3>
-						<h4> San Francisco </h4>
-						<h4> Los Altos </h4></li>
+						<li><h2> Arizona: </h2></li>
+						<li> Page </li>
+						<li> Page2 </li>
+						<h1></h1>
+						<li><h2> California: </h2></li>
+						<li> San Francisco </li>
+						<li> Los Altos </li>
 					</ul>
 				</div>
 				<div class="amenities">
 					<h3> Amenities </h3>
 					<h4> Internet,Kitchen... </h4>
 					<ul class="popover">
-						<li><h4> Internet </h4></li>
-						<li><h4> TV </h4></li>
-						<li><h4> Kitchen </h4></li>
-						<li><h4> Iron </li>
+						<li> Internet </li>
+						<li> TV </li>
+						<li> Kitchen </li>
+						<li> Iron </li>
 					</ul>
 				</div>
 				<button class="button"> Search </button>
