--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/3-footer.css" media="screen"/>
 		<link rel="stylesheet" type="text/css" href="styles/4-common.css" media="screen"/>
 		<link rel="stylesheet" type="text/css" href="styles/6-filters.css" media="screen"/>
+		<link rel="stylesheet" type="text/css" href="styles/7-places.css" media="screen"/>
 	</head>
 	<body>
 		<header>
@@ -40,6 +41,18 @@
 				<button class="button"> Search </button>
 			</section>
 		</div>
+		<section class="places">
+			<h1> Places </h1>
+			<article class="article">
+				<h2> My home </h2>
+			</article>
+			<article class="article">
+				<h2> Tiny house </h2>
+			</article>
+			<article class="article">
+				<h2> A suite </h2>
+			</article>
+		</section>
 		<footer>
 			Best School
 		</footer>
