--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -40,19 +40,13 @@
 				</div>
 				<button class="button"> Search </button>
 			</section>
+			<section class="places">
+				<h1> Places </h1>
+				<article><h2> My home </h2></article>
+				<article><h2> Tiny house </h2></article>
+				<article><h2> A suite </h2></article>
+			</section>
 		</div>
-		<h1> Places </h1>
-		<section class="places">
-			<article class="article">
-			<h2> My home </h2>
-			</article>
-			<article class="article">
-				<h2> Tiny house </h2>
-			</article>
-			<article class="article">
-				<h2> A suite </h2>
-			</article>
-		</section>
 		<footer>
 			Best School
 		</footer>
