--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/3-footer.css" media="screen"/>
 		<link rel="stylesheet" type="text/css" href="styles/4-common.css" media="screen"/>
 		<link rel="stylesheet" type="text/css" href="styles/6-filters.css" media="screen"/>
-		<link rel="stylesheet" type="text/css" href="styles/7-places.css" media="screen"/>
+		<link rel="stylesheet" type="text/css" href="styles/8-places.css" media="screen"/>
 	</head>
 	<body>
 		<header>
@@ -42,7 +42,14 @@
 			</section>
 			<section class="places">
 				<h1> Places </h1>
-				<article><h2> My home </h2></article>
+				<article>
+					<h2> My home </h2>
+					<div class="price_by_night">
+						<h2> $ 80 </h2>
+					</div>
+					<div class="information"></div>
+				</article>
+
 				<article><h2> Tiny house </h2></article>
 				<article><h2> A suite </h2></article>
 			</section>
