information division updated

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -43,11 +43,21 @@
 			<section class="places">
 				<h1> Places </h1>
 				<article>
-					<h2> My home </h2>
 					<div class="price_by_night">
 						<h2> $ 80 </h2>
 					</div>
-					<div class="information"></div>
+					<h2> My home </h2>
+					<div class="information">
+						<div class="max_guest">
+							2 Guests
+						</div>
+						<div class="number_rooms">
+							1 Bedroom
+						</div>
+						<div class="number_bathrooms">
+							1 Bedroom
+						</div>
+					</div>
 				</article>
 
 				<article><h2> Tiny house </h2></article>
