user and description updated

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -49,15 +49,39 @@
 					<h2> My home </h2>
 					<div class="information">
 						<div class="max_guest">
-							2 Guests
+							<p> 2 Guests </p>
 						</div>
 						<div class="number_rooms">
-							1 Bedroom
+							<p> 1 Bedroom </p>
 						</div>
 						<div class="number_bathrooms">
-							1 Bedroom
+							<p> 1 Bathroom </p>
 						</div>
 					</div>
+					<div class="user">
+						<p><b>Owner:</b> Elon Musk</p>
+					</div>
+					<div class="description">
+						<p>Boasting an array of sleek finishes and a thoughtful open plan layout,
+						this immaculate 1-bedroom, 1-bathroom condo is a paradigm of contemporary
+						Brooklyn living. Features of this 531 sq. ft. home include wide plank
+						engineered hardwood floors, huge Pella windows with western exposure,
+						central heating and cooling, and a convenient washer/dryer hook-up.
+						Beyond a functional entryway space the home flows into a luminous,
+						open- concept living, dining, and kitchen area. The galley-style kitchen
+						is equipped with white quartz countertops, a white tile backsplash, Nolte
+						cabinets, and a suite of high-end stainless steel appliances from Samsung
+						and Fisher & Paykel. The bedroom sits just off the living area and has a
+						large reach-in closet. The bathroom has ceramic tile flooring, textured
+						walls, and chic Kohler and Delta fixtures. The Hill is a brand new boutique
+						condominium located in Ocean Hill. The building has an elevator, a bicycle
+						room, private storage, and parking spaces. It is less than a block away
+						from all the restaurants, shops, and grocery stores that line Rockaway
+						Avenue, and is close to several parks and playgrounds. Nearby subway lines
+						include the A/C/L/J. Pets are welcome.</p>
+					</div>
+				
+
 				</article>
 
 				<article><h2> Tiny house </h2></article>
