user and description updated

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -43,10 +43,8 @@
 			<section class="places">
 				<h1> Places </h1>
 				<article>
-					<div class="price_by_night">
-						<h2> $ 80 </h2>
-					</div>
 					<h2> My home </h2>
+					<div class="price_by_night"> $80 </div>
 					<div class="information">
 						<div class="max_guest">
 							<p> 2 Guests </p>
@@ -80,12 +78,66 @@
 						Avenue, and is close to several parks and playgrounds. Nearby subway lines
 						include the A/C/L/J. Pets are welcome.</p>
 					</div>
-				
-
 				</article>
-
-				<article><h2> Tiny house </h2></article>
-				<article><h2> A suite </h2></article>
+				<article>
+					<h2> Tiny house </h2>
+					<div class="price_by_night"> $65 </div>
+					<div class="information">
+						<div class="max_guest">
+							<p> 4 Guests </p>
+						</div>
+						<div class="number_rooms">
+							<p> 2 Bedrooms </p>
+						</div>
+						<div class="number_bathrooms">
+							<p> 1 Bathroom </p>
+						</div>
+					</div>
+					<div class="user">
+						<p><b>Owner:</b> Ray Dalio</p>
+					</div>
+					<div class="description">
+						<p>This 2 Bedroom W/ 1 Full Bathroom Ranch Home Is Immaculate
+						& Full Of Upgrades! Enjoy The Open Floor Plan W/ Vaulted 15ft
+						Ceilings & Large Windows Throughout. The Beautiful Kitchen Is
+						The Heart Of The Home Complete With Large Customized Granite
+						Island & Stainless Steel Appliances. Updated Lighting Throughout
+						The Entire Home. Fully Updated Guest Bathroom And Laundry Room.
+						This Floorplan Includes 2′ Extension On Every Side Increasing 
+						The Square Footage, Large Extended Patio For Entertaining Right
+						Off The Dining Area. The Large Master Bedroom W/ Large Garden Tub,
+						Double Sinks & Huge Walk-In Closet. Enjoy The Fully Fenced Backyard
+						Perfect For Kids & Pets. The 2.5 Car Extended Garage Allows Room For
+						Extra Storage Or Work Area.</p>
+					</div>
+				</article>
+				<article><h2> A suite </h2>
+					<div class="price_by_night"> $190 </div>
+					<div class="information">
+						<div class="max_guest">
+							<p> 4 Guests </p>
+						</div>
+						<div class="number_rooms">
+							<p> 2 Bedrooms </p>
+						</div>
+						<div class="number_bathrooms">
+							<p> 2 Bathroom </p>
+						</div>
+					</div>
+					<div class="user">
+						<p><b>Owner:</b> Barren Buffet</p>
+					</div>
+					<div class="description">
+						<p>With 1000 square feet of living space, 2 bedrooms, and 2 baths,
+						our second-floor Family Suite is the largest in the hotel. The master
+						bedroom has one king-sized bed with French doors opening to two small
+						balconies. The second bedroom has a large bunk bed (queen over queen)
+						with another small balcony. The furnishings include a spacious living
+						room with a 42″ flat screen television, an eight-seat dining table,
+						and a small kitchen. More extras include a bidet toilet, bathrobes,
+						slippers and Keurig Beverage Brewing System.</p>
+					</div>
+				</article>
 			</section>
 		</div>
 		<footer>
