--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -71,12 +71,7 @@
 						cabinets, and a suite of high-end stainless steel appliances from Samsung
 						and Fisher & Paykel. The bedroom sits just off the living area and has a
 						large reach-in closet. The bathroom has ceramic tile flooring, textured
-						walls, and chic Kohler and Delta fixtures. The Hill is a brand new boutique
-						condominium located in Ocean Hill. The building has an elevator, a bicycle
-						room, private storage, and parking spaces. It is less than a block away
-						from all the restaurants, shops, and grocery stores that line Rockaway
-						Avenue, and is close to several parks and playgrounds. Nearby subway lines
-						include the A/C/L/J. Pets are welcome.</p>
+						walls, and chic Kohler and Delta fixtures. Pets are welcome.</p>
 					</div>
 				</article>
 				<article>
@@ -101,14 +96,10 @@
 						& Full Of Upgrades! Enjoy The Open Floor Plan W/ Vaulted 15ft
 						Ceilings & Large Windows Throughout. The Beautiful Kitchen Is
 						The Heart Of The Home Complete With Large Customized Granite
-						Island & Stainless Steel Appliances. Updated Lighting Throughout
-						The Entire Home. Fully Updated Guest Bathroom And Laundry Room.
-						This Floorplan Includes 2′ Extension On Every Side Increasing 
-						The Square Footage, Large Extended Patio For Entertaining Right
-						Off The Dining Area. The Large Master Bedroom W/ Large Garden Tub,
-						Double Sinks & Huge Walk-In Closet. Enjoy The Fully Fenced Backyard
-						Perfect For Kids & Pets. The 2.5 Car Extended Garage Allows Room For
-						Extra Storage Or Work Area.</p>
+						Island & Stainless Steel Appliances.The Large Master Bedroom W/
+						Large Garden Tub, Double Sinks & Huge Walk-In Closet. Enjoy
+						The Fully Fenced Backyard Perfect For Kids & Pets. The 2.5 Car
+						Extended Garage Allows Room For Extra Storage Or Work Area.</p>
 					</div>
 				</article>
 				<article><h2> A suite </h2>
